header or nav section complete with responsive done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,42 @@
 </head>
 
 <body>
-    <h1>welcome to blog project</h1>
+    <!-- header start here -->
+        <header id="blog-header">
+            <figure class="logo-figure">
+                <i class="fab fa-autoprefixer logo"></i>
+            </figure>
+
+            <nav aria-label="Main Menu">
+                <ul role="menubar">
+                    <li role="none">
+                        <a href="#" class="nav-link"
+                        role="menuitem">Home</a>
+                    </li>
+
+                    <li role="none">
+                        <a href="#" class="nav-link"
+                        role="menuitem">About</a>
+                    </li>
+
+                    <li role="none">
+                        <a href="#" class="nav-link"
+                        role="menuitem">Archives</a>
+                    </li>
+
+                    <li role="none">
+                        <a href="#" class="nav-link"
+                        role="menuitem">Blog Post</a>
+                    </li>
+
+                    <li role="none">
+                        <a href="#" class="nav-link"
+                        role="menuitem">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+    <!-- header end here -->
 </body>
 
 </html>
