Banner section and responsive done!

--- a/index.html
+++ b/index.html
@@ -21,41 +21,59 @@
 
 <body>
     <!-- header start here -->
-        <header id="blog-header">
-            <figure class="logo-figure">
-                <i class="fab fa-autoprefixer logo"></i>
-            </figure>
+    <header id="blog-header">
+        <figure class="logo-figure">
+            <i class="fab fa-autoprefixer logo"></i>
+        </figure>
 
-            <nav aria-label="Main Menu">
-                <ul role="menubar">
-                    <li role="none">
-                        <a href="#" class="nav-link"
-                        role="menuitem">Home</a>
-                    </li>
+        <nav aria-label="Main Menu">
+            <ul role="menubar">
+                <li role="none">
+                    <a href="#" class="nav-link" role="menuitem">Home</a>
+                </li>
 
-                    <li role="none">
-                        <a href="#" class="nav-link"
-                        role="menuitem">About</a>
-                    </li>
+                <li role="none">
+                    <a href="#" class="nav-link" role="menuitem">About</a>
+                </li>
 
-                    <li role="none">
-                        <a href="#" class="nav-link"
-                        role="menuitem">Archives</a>
-                    </li>
+                <li role="none">
+                    <a href="#" class="nav-link" role="menuitem">Archives</a>
+                </li>
 
-                    <li role="none">
-                        <a href="#" class="nav-link"
-                        role="menuitem">Blog Post</a>
-                    </li>
+                <li role="none">
+                    <a href="#" class="nav-link" role="menuitem">Blog Post</a>
+                </li>
 
-                    <li role="none">
-                        <a href="#" class="nav-link"
-                        role="menuitem">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
+                <li role="none">
+                    <a href="#" class="nav-link" role="menuitem">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <!-- header end here -->
+
+
+
+    <!-- main start here -->
+    <main>
+        <!--banner start here-->
+        <section id="blog-banner-section">
+            <article>
+                <h1 class="banner-heading">Web development</h1>
+                <p class="banner-description text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit reiciendis amet est atque
+                    maiores ad enim error ex mollitia? Obcaecati, labore nemo quibusdam aspernatur voluptate dolor est
+                    vero veniam ex architecto laudantium voluptas officiis fuga porro ratione ipsa voluptatibus, qui
+                    neque debitis? Doloremque dignissimos in sint cum pariatur ab aliquid ipsa temporibus perspiciatis
+                    
+                </p>
+
+            </article>
+            <aside><img src="./images/03.jpg" alt="cover" class="banner-img"></aside>
+        </section>
+        <!--banner ends here-->
+    </main>
+
+    <!-- main Ends here -->
 </body>
 
 </html>
