about section complete with responsive!

--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
         <section id="blog-banner-section">
             <article>
                 <h1 class="banner-heading">Web development</h1>
-                <p class="banner-description text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit reiciendis amet est atque
-                    maiores ad enim error ex mollitia? Obcaecati, labore nemo quibusdam aspernatur voluptate dolor est
+                <p class="banner-description text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Reprehenderit reiciendis amet est atquemaiores ad enim error ex mollitia? Obcaecati, labore nemo
+                    quibusdam aspernatur voluptate dolor est
                     vero veniam ex architecto laudantium voluptas officiis fuga porro ratione ipsa voluptatibus, qui
                     neque debitis? Doloremque dignissimos in sint cum pariatur ab aliquid ipsa temporibus perspiciatis
-                    
+
                 </p>
 
             </article>
@@ -74,6 +75,50 @@
     </main>
 
     <!-- main Ends here -->
+
+    <!-- about me section start here -->
+    <section id="blog-about" class="section-center">
+        <h2 class="section-heading text-white">
+            About Me
+        </h2>
+        <div class="card-container">
+            <div class="card">
+                <h3 class="card-header">Education</h3>
+                <p class="card-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum tenetur earum veritatis ratione aperiam
+                    suscipit alias, nisi eius aut delectus culpa blanditiis incidunt at eum explicabo nobis! Sapiente ab
+                    ullam libero explicabo ratione aperiam.
+
+                </p>
+                <button type="submit" class="card-btn btn">Read More</button>
+            </div>
+            <div class="card">
+                <h3 class="card-header">Education</h3>
+                <p class="card-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum tenetur earum veritatis ratione aperiam
+                    suscipit alias, nisi eius aut delectus culpa blanditiis incidunt at eum explicabo nobis! Sapiente ab
+                    ullam libero explicabo ratione aperiam.
+
+                </p>
+                <button type="submit" class="card-btn btn">Read More</button>
+            </div>
+
+            <div class="card">
+                <h3 class="card-header">Education</h3>
+                <p class="card-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum tenetur earum veritatis ratione aperiam
+                    suscipit alias, nisi eius aut delectus culpa blanditiis incidunt at eum explicabo nobis! Sapiente ab
+                    ullam libero explicabo ratione aperiam.
+
+                </p>
+                <button type="submit" class="card-btn btn">Read More</button>
+            </div>
+        </div>
+    </section>
+    <!-- about me section end here -->
+
+    
+
 </body>
 
 </html>
