--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </figure>
 
         <nav aria-label="Main Menu">
-            <ul role="menubar">
+            <ul role="menubar" aria-label="Main Menu">
                 <li role="none">
                     <a href="#" class="nav-link" role="menuitem">Home</a>
                 </li>
@@ -204,6 +204,75 @@
     </section>
 
     <!-- blog-post end here -->
+
+
+    <!-- contact section start here -->
+    <section id="contact-section" class="section-center">
+        <h2 class="section-heading blog-post-heading text-white">Contact Me</h2>
+         <form action="" id="contact-form">
+             <div class="form-control">
+                <label for="name">Name</label>
+                <input type="text" id="name" required autocomplete="name">
+             </div>
+
+             <div class="form-control">
+                <label for="email">Email</label>
+                <input type="email" id="email" required autocomplete="email">
+             </div>
+
+             <div class="form-control">
+                <label for="message">Message</label>
+                <textarea name="message" id="message"></textarea>
+             </div>
+
+             <div class="form-control form-btn-field">
+                <button type="submit" class="btn contact-btn">Submit</button>
+             </div>
+         </form>
+
+
+    </section>
+
+    <!-- contact section ends here -->
+
+    <!-- footer section starts here -->
+    <footer>
+        <p class="copyright-text">
+            Copyright &copy; by Ahsan Habib. All rights reserved.
+        </p>
+
+        <nav aria-label="Footer Menu">
+            <ul role="menubar2"id="menubar2" aria-label="Footer Menu">
+                <li role="none">
+                    <a href="https://www.facebook.com/ahsanhabib.mradul/"target="_blank" class="nav-link" role="menuitem">
+                        <i class="fab fa-facebook footer-icon"></i>
+                    </a>
+                </li>
+
+                <li role="none">
+                    <a href="#home"target="_blank" class="nav-link" role="menuitem">
+                        <i class="fab fa-youtube footer-icon"></i>
+                    </a>
+                </li>
+
+                <li role="none">
+                    <a href="https://github.com/Ahsan75412"target="_blank" class="nav-link" role="menuitem">
+                        <i class="fab fa-github footer-icon"></i>
+                    </a>
+                </li>
+
+                <li role="none">
+                    <a href="https://www.linkedin.com/in/ahsan-habib-programmer/"target="_blank" class="nav-link" role="menuitem">
+                        <i class="fab fa-linkedin footer-icon"></i>
+                    </a>
+                </li>
+
+                
+            </ul>
+        </nav>
+    </footer>
+
+    <!-- footer section ends here -->
 
 </body>
 
