--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog</title>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,23 +29,23 @@
         <nav aria-label="Main Menu">
             <ul role="menubar" aria-label="Main Menu">
                 <li role="none">
-                    <a href="#" class="nav-link" role="menuitem">Home</a>
+                    <a href="#home" class="nav-link" role="menuitem">Home</a>
                 </li>
 
                 <li role="none">
-                    <a href="#" class="nav-link" role="menuitem">About</a>
+                    <a href="#blog-about" class="nav-link" role="menuitem">About</a>
                 </li>
 
                 <li role="none">
-                    <a href="#" class="nav-link" role="menuitem">Archives</a>
+                    <a href="#archives" class="nav-link" role="menuitem">Archives</a>
                 </li>
 
                 <li role="none">
-                    <a href="#" class="nav-link" role="menuitem">Blog Post</a>
+                    <a href="#blog-post" class="nav-link" role="menuitem">Blog Post</a>
                 </li>
 
                 <li role="none">
-                    <a href="#" class="nav-link" role="menuitem">Contact</a>
+                    <a href="#contact-section" class="nav-link" role="menuitem">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -55,7 +55,7 @@
 
 
     <!-- main start here -->
-    <main>
+    <main id="home">
         <!--banner start here-->
         <section id="blog-banner-section">
             <article>
